CommandLine -Now runs pmars! Only runs it against warrior.red -Can add a parameter to define a specific filename
Population
-Added a switch statement for cross_over